# damo-embedding

./: .gitignore  404.html  CMakeLists.txt  CNAME  MANIFEST.in  README.md  Untitled-3.py  damo.i  damo.py  damo_embedding.py  damo_wrap.cxx  go.sum  index.html  markdown-page.html  pyEmbedding.py  pyembedding.i  pyembedding.py  pyembedding_wrap.cxx  pyproject.toml  requirements.txt  setup.py  setup.py.74d2f259ddbb4e65191575363173d3a0.tmp  sitemap.xml
.github/workflows/: gh-pages.yml  main.yml  python-publish.yml
api/: api.pb.go  api.proto  api_grpc.pb.go  proto.sh
assets/css/: styles.8d86ade6.css
assets/js/: 0e618f41.629f78f5.js  0e618f41.b17b60e5.js  0e618f41.eacd8bbc.js  17896441.760e0903.js  1be78505.05d979cd.js  1c6947ee.1c4ba8ad.js  1c6947ee.42b35de7.js  1c6947ee.5b000e3b.js  1f70efc3.160f84cc.js  1f70efc3.4fdd50da.js  1f70efc3.f13db0c5.js  30267144.340d3f8a.js  30267144.3e041552.js  30267144.448a2490.js  30267144.7a353af9.js  30267144.c9481119.js  377ca38f.471afba5.js  377ca38f.65cf86fc.js  377ca38f.ab952837.js  393be207.f9865fdf.js  651f9fbf.35b148b9.js  651f9fbf.93a3545a.js  651f9fbf.a57814fd.js  651f9fbf.b99d612f.js  651f9fbf.ffa0362d.js  76aff828.04938567.js  76aff828.1e892881.js  76aff828.ab291017.js  855b4e94.68bf637f.js  855b4e94.f37ba4fb.js  926599ef.95c230ce.js  935f2afb.0ce81392.js  935f2afb.8102e79d.js  935f2afb.87e606e9.js  935f2afb.d45a6609.js  935f2afb.e146cb35.js  935f2afb.e7f756b9.js  9687ed62.0ac26932.js  9687ed62.4be6d3bc.js  9687ed62.4ef366a9.js  (+41 more)
damo_embedding/: __init__.py  config.py  damo_embedding.py  damo_helper.py  embedding.py  graph.py  inference.py  load_model.py  save_model.py  trainning.py  util.py
doc/CN/: embedding.md  python3.md  readme_CN.md  rocksdb.md  swig.md
doc/EN/: Embedding.md  Optimizer.md  RocksDB.md  Storage.md
docs/: Example.html  Intro.html  docusaurus.config.js  install.html  modules.html  package-lock.json  package.json  quick_install.html
docs/docs/: Example.md  Intro.md  quick_install.mdx
docs/docs/install/: Install.md
docs/docs/modules/: CBF.md  Embedding.md  Initializer.md  Modules.md  Optimizer.md  Storage.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/: Example.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: Intro.md  quick_install.mdx
docs/install/: Python3.html  RocksDB.html  Swig&NumPy.html
docs/modules/: CBF.html  Embedding.html  Initializer.html  Intro.html  Optimizer.html  Scheduler.html  Storage.html
docs/src/pages/: index.js
examples/: embedding.py  filter.py  storage.py
examples/models/: config.json  config.toml  data_prepare.py  deepfm.py  deepfm_test.py  embedding.py  gwen.py  gwen_test.py
examples/modules/: embedding.py  filter.py  initializer.py  optimizer.py  parameters.py  storage.py
include/: argparse.hpp  common.h  count_bloom_filter.h  counting_bloom_filter.h  cpptoml.h  damo-embedding.h  damo.h  decay_learning_rate.h  embedding.h  initializer.h  learning_rate_scheduler.h  optimizer.h  py_embedding.h  pyembedding.h  sparse_pserver.h
scripts/: prepare_build_centos.sh  prepare_build_debain.sh
service/: damo.go  service.go
src/: common.cc  common.cpp  count_bloom_filter.cpp  counting_bloom_filter.cpp  damo-embedding.cpp  damo.cc  damo.cpp  decay_learning_rate.cpp  embedding.cc  embedding.cpp  initializer.cc  initializer.cpp  learning_rate_scheduler.cpp  main.cpp  optimizer.cc  optimizer.cpp  py_embedding.cpp  pydamo.cc  pydamo.cpp  pyembedding.cpp
test/: test_adagrad.py  test_adam.py  test_adamw.py  test_filter.py  test_ftrl.py  test_lion.py  test_parameters.py  test_sgd.py
test/optz/: test_adagrad.py  test_adam.py  test_adamw.py  test_ftrl.py  test_lion.py  test_sgd.py
test/service/: dump.py  test.py
third/: damo-embedding-linux-amd64.pc
zh-Hans/: 404.html  index.html  markdown-page.html  sitemap.xml
zh-Hans/assets/css/: styles.78103f02.css
zh-Hans/assets/js/: 030cf24f.8387a430.js  030cf24f.cf74ec4d.js  296f715c.3fbe42a5.js  296f715c.b6c8ad82.js  296f715c.cdc27f16.js  2a95db3c.0121d810.js  2a95db3c.4197aef5.js  2a95db3c.4453cf2a.js  2a95db3c.732c0acf.js  393be207.2f2c8ce2.js  7b775bb0.725c1458.js  7b775bb0.9eb4cd55.js  7b775bb0.addc7e48.js  7b775bb0.ca3007ee.js  7b775bb0.ef5baaec.js  80f42489.282ffc9b.js  80f42489.2ec09e9e.js  80f42489.4cb90802.js  80f42489.b21c8924.js  8a914d9c.11da4c5e.js  8a914d9c.744bbf20.js  8a914d9c.c9f3f4af.js  8a914d9c.eca61534.js  8de03ba1.329c89a9.js  8de03ba1.6a53f58e.js  8de03ba1.a961079d.js  935f2afb.332da09e.js  935f2afb.56e89653.js  935f2afb.7fac0a3f.js  935f2afb.ae673d98.js  935f2afb.afc5e6c2.js  935f2afb.b5935483.js  935f2afb.fee7f690.js  95c47581.42772eab.js  95c47581.d132a5b3.js  b0be19cf.0fdc5dfe.js  b0be19cf.7d902cf1.js  b0be19cf.bf448596.js  b0be19cf.c22811e5.js  b0be19cf.de3c2d22.js  (+47 more)
zh-Hans/docs/: Example.html  Intro.html  install.html  modules.html  quick_install.html
zh-Hans/docs/install/: Python3.html  RocksDB.html  Swig&NumPy.html
zh-Hans/docs/modules/: CBF.html  Embedding.html  Initializer.html  Intro.html  Optimizer.html  Scheduler.html  Storage.html
(+13 files in other folders)
