[build-system]
requires = [
    "setuptools>=59.6.0",
    "numpy>=1.19.0",
    "pybind11>=2.11.1",
    "ninja>=1.11.1",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "docker.io/kungjim/manylinux2014_x86_64_centos_rocksdb:5b4e613"
manylinux-pypy_x86_64-image = "docker.io/kungjim/manylinux2014_x86_64_centos_rocksdb:5b4e613"
manylinux-aarch64-image = "docker.io/kungjim/manylinux2014_aarch64_centos_rocksdb:b12cc8b"
manylinux-pypy_aarch64-image = "docker.io/kungjim/manylinux2014_aarch64_centos_rocksdb:b12cc8b"

skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --plat manylinux2014_$(uname -m)"
archs = ["x86_64", "aarch64"]


[tool.cibuildwheel.macos]
archs = ["x86_64"]

repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
